Cluster Hygiene Management/clean-pv/test/chainsaw/test-resources/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: default
  labels:
    test: "chainsaw"
spec:
  containers:
  - name: test-container
    image: busybox:1.35
    command: ["sleep", "3600"]
    volumeMounts:
    - name: test-volume
      mountPath: /data
  volumes:
  - name: test-volume
    persistentVolumeClaim:
      claimName: test-pvc
  restartPolicy: Never
