Cluster Hygiene Management/clean-pv/test/chainsaw/test-resources/unused-pv.yaml
apiVersion: v1
kind: PersistentVolume
metadata:
  name: unused-test-pv
  labels:
    kyverno.io/cleanup-policy: "enabled"
    test: "chainsaw"
spec:
  capacity:
    storage: 1Gi
  accessModes:
    - ReadWriteOnce
  persistentVolumeReclaimPolicy: Delete
  storageClassName: standard
  hostPath:
    path: /tmp/unused-pv
