Cluster Hygiene Management/clean-pv/test/chainsaw/test-resources/used-pv.yaml
apiVersion: v1
kind: PersistentVolume
metadata:
  name: used-test-pv
  labels:
    test: "chainsaw"
spec:
  capacity:
    storage: 1Gi
  accessModes:
    - ReadWriteOnce
  persistentVolumeReclaimPolicy: Delete
  storageClassName: standard
  hostPath:
    path: /tmp/used-pv
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: test-pvc
  namespace: default
spec:
  accessModes:
    - ReadWriteOnce
  resources:
    requests:
      storage: 1Gi
  storageClassName: standard
  volumeName: used-test-pv
